--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,29 @@
+# Copy this file to .env (or set real env vars in your deployment) and fill values. Do NOT commit real secrets.
+
+# FastAPI / Twilio (SMS)
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_PHONE_NUMBER=+901234567890  # E.164 format
+DEFAULT_COUNTRY_CODE=90
+DEV_SMS_FALLBACK=true
+
+# Mailgun (optional)
+MAILGUN_DOMAIN=mg.yourdomain.com
+MAILGUN_API_KEY=key-xxxxxxxxxxxxxxxxxxxx
+
+# Gmail SMTP (optional)
+GMAIL_USER=you@gmail.com
+GMAIL_PASSWORD=your_app_password
+
+# JWT secret
+SECRET_KEY=change-this-secret
+
+# Firebase Admin (optional) - either JSON string or path
+# FIREBASE_SERVICE_ACCOUNT='{"type": ... }'
+# FIREBASE_SERVICE_ACCOUNT_PATH=/path/to/serviceAccountKey.json
 # Environment variables
 SECRET_KEY=your-super-secret-jwt-key-here-change-in-production
-
-# Database - SQLite (recommended for development)
-# DATABASE_URL=sqlite:///./education_platform.db  # Default, no need to set
-
-# Database - PostgreSQL (for production)
-# DATABASE_URL=postgresql://username:password@localhost/education_platform
+DATABASE_URL=postgresql://username:password@localhost/education_platform
 
 # Twilio (SMS/OTP)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
