--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
+    "@types/google.maps": "^3.58.1",
     "firebase": "^12.5.0"
   }
 }
