Fix auth redirect loops on student pages and improve button designs

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_qVRMUi4iU0WDbzKNzG3Vzv9bZyw1","orgId":"team_aXPtIb1CZASk0hgBZGshII5w","projectName":"websitesi"}
+{"projectId":"prj_QOoaSQjv1ZAVeRLJRNdEzOb4yLNH","orgId":"team_aXPtIb1CZASk0hgBZGshII5w","projectName":"frontend"}
