--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/backend/main.py",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      "dest": "/backend/main.py"
     },
     {
       "src": "/uploads/(.*)",
@@ -29,17 +28,6 @@
     {
       "src": "/(.*)",
       "dest": "/frontend/$1"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/api/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=0, must-revalidate"
-        }
-      ]
     }
   ]
 }
